objects/ShipmentItem.object
<CustomObject>
    <fields>
        <fullName>PMC_CPQ_AlternateSubstituteProduct__c</fullName>
        <description>This field captures the alternate Substitute Product.</description>
        <label>Alternate/Substitute Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alternate Product,</fullName>
                </value>
                <value>
                    <fullName>Substitute Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ConfirmationStatus__c</fullName>
        <description>Picking or put away status.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Confirmation Status</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CurrentLocation__c</fullName>
        <description>This field captures the current Current Location.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Current Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CustomerAgreedPriceFPD__c</fullName>
        <description>This field captures the customer Price (FPD).</description>
        <label>Customer Agreed Price (FPD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DeliveryItemID__c</fullName>
        <description>This field captures the delivery Item ID.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SAP Delivery Item ID</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DeliveryItemName__c</fullName>
        <description>This field captures the delivery Item Name.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DeliveryLineStatus__c</fullName>
        <description>This field is to capture the status of the Line Item</description>
        <label>Delivery Line Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Shipped</fullName>
                </value>
                <value>
                    <fullName>Partially Shipped</fullName>
                </value>
                <value>
                    <fullName>Completely Shipped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DeliveryQuantity__c</fullName>
        <description>This field captures the delivery Delivery Quantity.</description>
        <label>Delivery Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DeliveryStatus__c</fullName>
        <description>This field captures the delivery Delivery  Status.</description>
        <label>Delivery Line Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Shipped</fullName>
                </value>
                <value>
                    <fullName>Partially Shipped</fullName>
                </value>
                <value>
                    <fullName>Completely Shipped</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                    <isActive>false</isActive>
                    <label>Delivered</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <isActive>false</isActive>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Open</fullName>
                    <isActive>false</isActive>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Picked</fullName>
                    <isActive>false</isActive>
                    <label>Picked</label>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                    <isActive>false</isActive>
                    <label>Shipped</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Destination__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Delivery Items</relationshipLabel>
        <relationshipName>Delivery_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ETA__c</fullName>
        <description>Estimated Time of Arrival date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ETA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_GoodsIssueStatusDescription__c</fullName>
        <description>This field captures the status code description of goods issues</description>
        <label>Goods Issue Status Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not yet processed</fullName>
                </value>
                <value>
                    <fullName>Partially Processed</fullName>
                </value>
                <value>
                    <fullName>Completely Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_LinePONumber__c</fullName>
        <formula>PMC_CPQ_OrderProduct__r.PMC_CPQ_LinePONumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Purchase Order #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ModeofTransportation__c</fullName>
        <inlineHelpText>Select the appropriate mode from the available options to track and manage logistics effectively</inlineHelpText>
        <label>MOT</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_MoT</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_OrderDocument__c</fullName>
        <description>This field captures the order PO etc.</description>
        <label>Order Document</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bill of Lading</fullName>
                </value>
                <value>
                    <fullName>Certificate of Analysis</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>PO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_OrderProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field captures the order Order Item.</description>
        <label>Order Item</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Delivery Items</relationshipLabel>
        <relationshipName>Delivery_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Origin__c</fullName>
        <description>This field captures the origin .</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_OwnerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field captures the owner of this record.</description>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PMC_CPQ_DeliveryItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PlantID__c</fullName>
        <description>This field captures the  Plant ID.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Plant ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Location</label>
        <referenceTo>PMC_CPQ_ProductLocation__c</referenceTo>
        <relationshipLabel>Delivery Lines</relationshipLabel>
        <relationshipName>Delivery_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_RailCarNumber__c</fullName>
        <description>This field captures the rail Number IntelliTrans.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Rail Road</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SAPDeliveryID__c</fullName>
        <description>This field captures the sap Delivery ID.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SAP Delivery ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SAPOrderID__c</fullName>
        <description>This field captures the sap Order ID.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SAP Order ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SAPOrderlineID__c</fullName>
        <description>This field captures the sap line ID.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SAP Order line ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SalesPrice__c</fullName>
        <description>This field captures the sales Sales Price.</description>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ShippedDate__c</fullName>
        <description>This field captures the shipped  Date.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipped Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_TruckNumber__c</fullName>
        <description>This field captures the Truck Number.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Truck Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_UnitOfWeight__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Unit Of Weight</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_UnitofMeasure__c</fullName>
        <description>This field captures the uom of Measure.</description>
        <inlineHelpText>Specify the unit in which the value of this field will be measured.</inlineHelpText>
        <label>UoM Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_SS_UnitOfMeasure</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_VehicleID__c</fullName>
        <description>This field captures the vehicle Vehicle ID.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Vehicle ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_VesselID__c</fullName>
        <description>This field captures the vessel Vessel ID.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Vessel ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_AccountUOMConvertedQuantity__c</fullName>
        <description>DO NOT USE</description>
        <label>Account UOM Converted Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_DeliveryplannedPGIdate__c</fullName>
        <formula>Shipment.PMC_CPQ_DeliveryPlannedGIDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery Planned PGI Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ProductFamily__c</fullName>
        <description>Product Family From Order Line</description>
        <formula>PMC_CPQ_OrderProduct__r.Product_Family__c</formula>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ProductListPrice__c</fullName>
        <description>List price of product</description>
        <formula>PMC_CPQ_OrderProduct__r.ListPrice</formula>
        <label>Product List Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_QuantityAccountsUoM__c</fullName>
        <description>Field to specify quantity in account&apos;s UOM</description>
        <formula>IF(  AND( 
         OR(Shipment.PMC_CPQ_Account__r.PMC_SS_UnitofMeasure__r.Name =  &apos;STN&apos; , 
            Shipment.PMC_CPQ_Account__r.PMC_SS_UnitofMeasure__r.Name =  &apos;MTN&apos; ), 
            TEXT( PMC_CPQ_UnitofMeasure__c ) ==  Shipment.PMC_CPQ_Account__r.PMC_SS_UnitofMeasure__r.Name ), 
     PMC_CPQ_DeliveryQuantity__c , 
     IF( AND(TEXT( PMC_CPQ_UnitofMeasure__c ) = &apos;MTN&apos;, Shipment.PMC_CPQ_Account__r.PMC_SS_UnitofMeasure__r.Name = &apos;STN&apos; ), 
         PMC_CPQ_DeliveryQuantity__c  *  $CustomMetadata.PMC_SS_UOMConversionMapping__mdt.MTNtoSTN.PMC_SS_ConversionFactor__c, 
         IF( AND(TEXT( PMC_CPQ_UnitofMeasure__c ) = &apos;STN&apos;, Shipment.PMC_CPQ_Account__r.PMC_SS_UnitofMeasure__r.Name = &apos;MTN&apos; ), 
             PMC_CPQ_DeliveryQuantity__c * $CustomMetadata.PMC_SS_UOMConversionMapping__mdt.STNtoMTN.PMC_SS_ConversionFactor__c , 
             0) ) )</formula>
        <label>Quantity (Account’s UoM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_UnitOfMeasure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to unit of measure object.</description>
        <label>Unit of Measure</label>
        <referenceTo>UnitOfMeasure</referenceTo>
        <relationshipLabel>Delivery Lines</relationshipLabel>
        <relationshipName>Delivery_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <recordTypes>
        <fullName>PMC_CPQ_Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>PMC_CPQ_Rail</fullName>
        <active>false</active>
        <label>Rail</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Restrict_Deliveryitem_Quantity</fullName>
        <active>true</active>
        <description>Restriction to Edit the Quantity after Completely Shipped</description>
        <errorConditionFormula>ISCHANGED(Quantity)  &amp;&amp;  
(ISPICKVAL(Shipment.PMC_CPQ_DeliveryStatus__c, &apos;Completely Shipped&apos;))</errorConditionFormula>
        <errorDisplayField>Quantity</errorDisplayField>
        <errorMessage>You cannot update the quantity field when the Delivery Status
is Completely Shipped</errorMessage>
    </validationRules>
</CustomObject>